# waywarden

./: .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  AGENT-TASKS.md  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Makefile  PRD.md  README.md  SECURITY.md  alembic.ini  package-lock.json  pi-session-2026-04-25T15-00-47-262Z_019dc528-521d-71ef-8b2a-9aa0f199c75f.html  pyproject.toml  report.html
.agents/skills/: SKILLS.md
.agents/skills/epic-to-tilldone/: SKILL.md
.agents/skills/plan-to-issues/: SKILL.md
.agents/skills/work-entire-epic/: SKILL.md
.agents/skills/work-next-issue-in-given-epic/: SKILL.md
.claude/: CLAUDE.md  settings.json  settings.local.json
.codex/: config.toml
.codex/skills/do-the-thing/: SKILL.md
.codex/skills/plan-to-issues/: SKILL.md
.codex/skills/work-next-issue-in-given-epic/: SKILL.md
.forgeflow/: BOOTSTRAP.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  epic.yml  feature.yml
.github/workflows/: ci.yaml
.pi/: taskplane.json
.pi/manual-extensions/: tilldone.ts
.waywarden/agents/: builder.md  documenter.md  plan-reviewer.md  planner.md  red-team.md  reviewer.md  scout.md  teams.yaml  waywarden-orchestrator.md
.waywarden/agents/experts/: agent-definition-expert.md  capability-expert.md  config-runtime-expert.md  extension-expert.md  prompt-expert.md
.waywarden/hooks/rewind/: README.md  spec.md
.waywarden/skills/brave-search/: SKILL.md
.waywarden/skills/browser-tools/: SKILL.md
.waywarden/skills/gmail/: SKILL.md
.waywarden/skills/google-calendar/: SKILL.md
.waywarden/skills/google-drive/: SKILL.md
.waywarden/skills/research-batch-processor/: SKILL.md
.waywarden/skills/research-intake/: SKILL.md
.waywarden/skills/research-note-router/: SKILL.md
.waywarden/skills/transcribe/: SKILL.md
.waywarden/skills/youtube-transcript/: SKILL.md
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py  20260413_0001_initial.py  55ad16c0_add_manifest_hash_to_runs.py  c4614d08b9a7_fix_seq_and_recorded_at_types.py
assets/knowledge/: getting-started.md  memory-vs-knowledge.md  provider-protocols.md
assets/policies/: coding-tool-policy.yaml
config/: app.yaml  backups.yaml  channels.yaml  instances.yaml  knowledge.yaml  memory.yaml  models.yaml  policies.yaml  skills.yaml
config/instances/: marc-ea.yaml
docs/: FRONTMATTER-SPEC.md  README.md  contributing.md
docs/architecture/: 0001-context-and-goals.md  0002-core-harness-plus-profile-packs.md  0002-ea-only-substrate.md  0003-memory-vs-knowledge.md  0004-skill-contract.md  0005-approval-model.md  0006-v1-v2-v3-roadmap.md  0007-good-and-bad-patterns.md  0008-coding-agent-prompts.md  0009-name-and-positioning.md  0010-inspiration-from-other-repos.md  0011-harness-boundaries-and-client-surfaces.md  0012-pre-p2-ghost-code-purge.md
docs/issues/: README.md  definition-of-done.md  epics.md  milestones.md  ordered-issues.md
docs/orchestration/: milestone-catalog.md  p8-durability-handoff.md
docs/prompts/: architecture-guardrails.md  honcho-integration.md  llm-wiki-integration.md  root-bootstrap.md  skills-and-routing.md
docs/references/: README.md
docs/research/: .batch-log-20260417-142750.md  .batch-log-20260417-143458.md  0013-voice-session-orchestration-and-conference-participation-v2.md  0013-voice-session-orchestration-and-conference-participation.md  README.md  adversarial-dev.md  archon.md  claude-code.md  claude-cowork.md  harness-design-long-running-apps.md  manus.md  notes.md  openai-agents-sdk-2026-04-15.md  openai-codex-desktop-2026-04.md  ottomator-agents.md  pi-vs-claude-code.md  wisprflow.md
docs/runbooks/: adversarial-review-checklist.md
docs/setup/: ci.md  ea-instance.md  local-postgres.md  providers.md  quickstart.md
docs/testing/: contract-test-plan.md
docs/usage/: api-smoke-tests.md  ea-operator-guide.md
infra/: docker-compose.db.yaml  docker-compose.sidecars.yaml
infra/systemd/: ea-api.service  ea-worker.service
profiles/coding/: profile.yaml
profiles/ea/: profile.yaml
profiles/home/: profile.yaml
scripts/: backup_now.py  bootstrap_vm.sh  llm_wiki_ingest.sh  llm_wiki_query.sh  we
snippets/: AGENTS.md-addition.md
src/ea/: app.py  settings.py
src/waywarden/: __init__.py  app.py  logging.py  settings.py
tests/: conftest.py
tests/alembic/: test_env_loader.py  test_initial_schema.py
tests/cli/: test_chat.py  test_cli_chat.py
tests/config/: test_app_config.py
tests/domain/: test_approval.py  test_context_provider.py  test_durability_metadata.py  test_ids.py  test_message.py  test_pipeline.py  test_run.py  test_run_event.py  test_session.py  test_session_reference.py  test_subagent.py  test_task.py  test_team.py  test_token_usage.py
tests/extensions/: test_base.py  test_registry.py
tests/instances/: test_channel_bindings.py
tests/integration/: test_chat_roundtrip.py  test_m1_boot.py  test_provider_swap.py  test_run_event_roundtrip.py
tests/meta/: test_ci_workflow.py  test_coverage_gate.py  test_pytest_markers.py  test_secret_scan.py
tests/policy/: test_loader.py  test_schema.py
tests/profiles/: test_required_providers.py
tests/services/: fake_knowledge.py  test_approval_engine.py  test_approval_engine_no_invented_events.py  test_approval_hooks.py  test_context_builder.py  test_context_builder_adr0003_boundary.py  test_resume.py  test_run_lifecycle.py  test_visibility.py
tests/tools/: __init__.py  test_registry.py
tests/unit/: fakes.py  test_app_factory.py  test_asset_loader.py  test_asset_schema.py  test_briefing.py  test_chat.py  test_cli.py  test_coding_profile_hydration.py  test_config_loader.py  test_delegation_handoff.py  test_ea_profile_hydration.py  test_ea_runtime_guardrails.py  test_ea_task_service.py  test_health.py  test_inbox_trage.py  test_ingress_triage.py  test_instance.py  test_instance_loader.py  test_placeholder_routes.py  test_profile.py  test_profile_loader.py  test_red_team_profiles.py  test_request_logging.py  test_routine_surface.py  test_scheduler.py  test_shared_assets_filters.py  test_skill_registry.py
(+377 files in other folders)
