[project]
name = "waywarden"
version = "0.1.0"
description = "Slim, profile-driven agent harness"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi==0.135.3",
  "uvicorn[standard]==0.44.0",
  "pydantic==2.13.0",
  "pydantic-settings==2.11.0",
  "sqlalchemy==2.0.49",
  "alembic==1.18.4",
  "psycopg[binary]==3.2.12",
  "httpx==0.28.1",
  "orjson==3.11.3",
  "pyyaml==6.0.3",
  "honcho-ai==2.1.1",
]

[project.optional-dependencies]
dev = [
  "pre-commit==4.3.0",
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "pytest-cov==6.0.0",
  "ruff==0.15.10",
  "mypy==1.18.2",
  "types-PyYAML==6.0.12.20250915",
]

[project.scripts]
waywarden = "waywarden.cli.main:run"

[tool.uv]
package = true
required-version = ">=0.11.0"

[tool.hatch.build.targets.wheel]
packages = ["src/waywarden"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/waywarden --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
branch = true
source = ["src/waywarden"]
omit = [
  "src/waywarden/profiles/ea/workers/*",
  "src/waywarden/profiles/ea/skills/builtin/*",
  "src/waywarden/adapters/*",
  "src/waywarden/api/routers/approvals.py",
  "src/waywarden/api/routers/backups.py",
  "src/waywarden/api/routers/knowledge.py",
  "src/waywarden/api/routers/memory.py",
  "src/waywarden/api/routers/tasks.py",
  "src/waywarden/api/schemas/*",
  "src/waywarden/domain/models/*",
  "src/waywarden/domain/services/approval_engine.py",
  "src/waywarden/domain/services/dream_manager.py",
  "src/waywarden/domain/services/response_planner.py",
  "src/waywarden/logging.py",
  "src/waywarden/settings.py",
  "src/waywarden/__init__.py",
]

[tool.coverage.report]
show_missing = true
exclude_also = [
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.13"
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
